extensions/wikia/EditPageLayout/css/core/header.scss
#EditPageHeader {
	@include gradient-header;
	border-bottom: 1px solid #cbc9ca;
	height: $height-epl-header;
	padding-left: 20px;
	position: relative;
	vertical-align: top;

	// scale down wiki logo
	> .wordmark {
		@include wordmark;
		@include clearfix;
		color: $color-links;
		display: inline-block;
		float: left;
		height: $height-epl-header;
		margin-right: 20px;
		width: auto;
		img {
			float: left;
			height: 45px;
		}
		// text wordmark should be vertically centered
		&.text {
			> a {
				display: inline-block;
				line-height: $height-epl-header;
			}
		}
	}
	> h2 {
		color: $color-text;
		font-size: 14px;
		line-height: 21px;
	}
	> h1 {
		display: inline-block;
		float: left;
		font-size: 19px;
		line-height: 17px;
		padding: 0;
		zoom: 1; // ie
		> a {
			color: $color-epl-header-links;
		}
	}
}

// "edit title" button
#EditPageTitle {
	cursor: pointer;
	display: none;
	font-size: 11px;
	margin: 0 4px;
	text-decoration: none;
	> img {
		margin: 4px;
		vertical-align: top;
	}
}

// JS enabled pencil button - it should only be visible when hovered over #EditPageHeader
#EditPageHeader:hover {
	> #EditPageTitle.enabled {
		display: inline;
	}
}

/* Need [Help]? */
#HelpLink {
	bottom: 5px;
	color: $color-text;
	position: absolute;
	right: 21px;
	> a {
		color: $color-epl-header-links;
	}
}

