Editor reskin: odd gap below global header (BugId:7024)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@38150 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/EditPageLayout/css/core/header.scss
+++ b/extensions/wikia/EditPageLayout/css/core/header.scss
@@ -32,6 +32,9 @@
 		color: $color-text;
 		font-size: 14px;
 		line-height: 21px;
+		// BugId:7024 - override per-wiki custom CSS
+		margin: 0;
+		padding: 0;
 	}
 	> h1 {
 		display: inline-block;
